Fix: Group get transaction by ID under Transactions tag
